@@ -389,7 +389,7 @@ static int decode_long(void *csound_, char *s, int argc, char **argv)
       O->FMidiname = s;                 /* Midifile name */
       if (!strcmp(O->FMidiname,"stdin")) {
         set_stdin_assign(csound, STDINASSIGN_MIDIFILE, 1);
-#if defined(WIN32) || defined(mills_macintosh)
+#if defined(WIN32) || defined(mac_classic)
         csoundDie(csound, Str("-F: stdin not supported on this platform"));
 #endif
       }
@@ -436,7 +436,7 @@ static int decode_long(void *csound_, char *s, int argc, char **argv)
         csoundDie(csound, Str("input cannot be stdout"));
       if (strcmp(O->infilename,"stdin") == 0) {
         set_stdin_assign(csound, STDINASSIGN_SNDFILE, 1);
-#if defined(WIN32) || defined(mills_macintosh)
+#if defined(WIN32) || defined(mac_classic)
         csoundDie(csound, Str("stdin audio not supported"));
 #endif
       }
@@ -484,7 +484,7 @@ static int decode_long(void *csound_, char *s, int argc, char **argv)
       O->Linename = s;
       if (!strcmp(O->Linename,"stdin")) {
         set_stdin_assign(csound, STDINASSIGN_LINEIN, 1);
-#if defined(mills_macintosh)
+#if defined(mac_classic)
         csoundDie(csound, Str("-L: stdin not supported on this platform"));
 #endif
       }
@@ -512,7 +512,7 @@ static int decode_long(void *csound_, char *s, int argc, char **argv)
       O->Midiname = s;
       if (!strcmp(O->Midiname,"stdin")) {
         set_stdin_assign(csound, STDINASSIGN_MIDIDEV, 1);
-#if defined(WIN32) || defined(mills_macintosh)
+#if defined(WIN32) || defined(mac_classic)
         csoundDie(csound, Str("-M: stdin not supported on this platform"));
 #endif
       }
@@ -539,7 +539,7 @@ static int decode_long(void *csound_, char *s, int argc, char **argv)
         dieu(csound, Str("-o cannot be stdin"));
       if (strcmp(O->outfilename,"stdout") == 0) {
         set_stdout_assign(csound, STDOUTASSIGN_SNDFILE, 1);
-#if defined(WIN32) || defined(mills_macintosh)
+#if defined(WIN32) || defined(mac_classic)
         csoundDie(csound, Str("stdout audio not supported"));
 #endif
       }
@@ -761,7 +761,7 @@ int argdecode(void *csound_, int argc, char **argv_)
             csoundDie(csound, Str("input cannot be stdout"));
           if (strcmp(O->infilename,"stdin") == 0) {
             set_stdin_assign(csound, STDINASSIGN_SNDFILE, 1);
-#if defined(WIN32) || defined(mills_macintosh)
+#if defined(WIN32) || defined(mac_classic)
             csoundDie(csound, Str("stdin audio not supported"));
 #endif
           }
@@ -777,7 +777,7 @@ int argdecode(void *csound_, int argc, char **argv_)
             dieu(csound, Str("-o cannot be stdin"));
           if (strcmp(O->outfilename,"stdout") == 0) {
             set_stdout_assign(csound, STDOUTASSIGN_SNDFILE, 1);
-#if defined(WIN32) || defined(mills_macintosh)
+#if defined(WIN32) || defined(mac_classic)
             csoundDie(csound, Str("stdout audio not supported"));
 #endif
           }
@@ -881,7 +881,7 @@ int argdecode(void *csound_, int argc, char **argv_)
           s += (int) strlen(s);
           if (!strcmp(O->Linename,"stdin")) {
             set_stdin_assign(csound, STDINASSIGN_LINEIN, 1);
-#if defined(mills_macintosh)
+#if defined(mac_classic)
             csoundDie(csound, Str("-L: stdin not supported on this platform"));
 #endif
           }
@@ -895,7 +895,7 @@ int argdecode(void *csound_, int argc, char **argv_)
           s += (int) strlen(s);
           if (!strcmp(O->Midiname,"stdin")) {
             set_stdin_assign(csound, STDINASSIGN_MIDIDEV, 1);
-#if defined(WIN32) || defined(mills_macintosh)
+#if defined(WIN32) || defined(mac_classic)
             csoundDie(csound, Str("-M: stdin not supported on this platform"));
 #endif
           }
@@ -909,7 +909,7 @@ int argdecode(void *csound_, int argc, char **argv_)
           s += (int) strlen(s);
           if (!strcmp(O->FMidiname,"stdin")) {
             set_stdin_assign(csound, STDINASSIGN_MIDIFILE, 1);
-#if defined(WIN32) || defined(mills_macintosh)
+#if defined(WIN32) || defined(mac_classic)
             csoundDie(csound, Str("-F: stdin not supported on this platform"));
 #endif
           }
